--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,41 @@
 [metadata]
+author = EchoStream
+author_email = support@echo.stream
 classifiers =
-    License :: Other/Proprietary License
+    License :: OSI Approved :: Apache Software License
+    Operating System :: POSIX
+    Operating System :: POSIX :: Linux
+    Operating System :: MacOS :: MacOS X
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
 description = Takes an existing EchoStream Tenant and creates a Terraform script and statefile for it
-license = Proprietary
+keywords = echostream, terraform, opentofu, tofu, terrafy
+license = Apache License 2.0
+license_files = LICENSE
 long_description = file: README.md
 long_description_content_type = text/markdown
 name = echostream-terrafy
-version = 0.0.9
+platforms = posix
+project_urls = 
+    Bug Tracker = https://github.com/Echo-Stream/echostream-terrafy/issues
+    Source Code = https://github.com/Echo-Stream/echostream-terrafy
+url = https://github.com/Echo-Stream/echostream-terrafy
+version = 0.0.10
 
 [options]
 python_requires = >=3.9
 include_package_data = true
 install_requires = 
-    argh==0.28.1
-    deepmerge==1.1.0
-    gql[requests]==3.4.0
+    argh==0.31.3
+    deepmerge==2.0
+    gql[requests]==3.5.0
     pycognito==2022.12.0
-    simplejson==3.18.4
-    termcolor==2.2.0
+    simplejson==3.19.3
+    termcolor==2.5.0
 packages = find:
 
 [options.entry_points]
